[gd_scene load_steps=2 format=3 uid="uid://4m42pa38n05q"]

[ext_resource type="Script" path="res://scripts/level_ui.gd" id="1_1r64p"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1167.0
offset_bottom = 669.0
script = ExtResource("1_1r64p")

[node name="Hearts" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 1280.0
offset_bottom = 1280.0
scale = Vector2(0.05, 0.05)

[node name="GameOver" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 372.0
offset_top = 262.0
offset_right = 762.0
offset_bottom = 359.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="Retry" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 468.0
offset_top = 378.0
offset_right = 665.0
offset_bottom = 437.0
text = "Retry"

[node name="Replay" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 477.0
offset_top = 498.0
offset_right = 674.0
offset_bottom = 557.0
text = "Replay"

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 986.0
offset_top = 8.0
offset_right = 1112.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "SCORE:"

[node name="Won" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 401.0
offset_top = 21.0
offset_right = 1051.0
offset_bottom = 349.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "YOU WIN!"

[node name="FinalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 204.0
offset_right = 690.0
offset_bottom = 355.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
text = "LIFE:
SCORE:
FINAL SCORE:"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = -11.0
offset_right = 630.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "30"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Replay" to="." method="_on_retry_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
